# databases-casbin-adapter

./: pyproject.toml
casbin_databases_adapter/: adapter.py
tests/: conftest.py  test_adapter.py
